# DjangoRestTemplate

./: '  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  angular.json  compose.deploy.yml  compose.override.yml  compose.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pre-commit-config.yaml  proxy.conf.json  pyproject.toml  requirements.txt  server.js  server.ts  tsconfig.app.json  tsconfig.json
.github/workflows/: build-production-stage.yml  deploy-production-stage.yml
astrotech-spaceapp.space/: cert.pem  chain.pem
certbot/: Dockerfile  certbot_renew.sh  generate-certificate.sh
certbot_data/renewal/: astrotech-spaceapp.space.conf
live/astrotech-spaceapp.space/: fullchain.pem
manipulator/: Dockerfile
manipulator/scripts/: certbot_renew.sh  certbot_request.sh  certbot_schedule.sh  entrypoint.sh  generate-certificate.sh
nginx/: Dockerfile  default.conf  key.pem  marketplace.conf  nginx.conf  ssl.conf
nginx/certbot/: myfile.txt
scripts/: certbot_renew.sh  certbot_schedule.sh  configure_db.sh  entrypoint.sh  renew_ssl_certificates.sh  run_api.sh  start_api.sh
server/: server.js
src/: index.html  main.ts  styles.scss
src/app/: app.component.html  app.component.js  app.component.scss  app.component.spec.ts  app.component.ts  app.config.js  app.config.ts  app.routes.js  app.routes.ts
src/app/services/: moysklad.service.ts  (+1 more)
src/base/: function_mixins.py  types.py
src/config/: asgi.py  urls.py  wsgi.py
src/styles/: styles.scss
src/types/: angularx-social-login.d.ts  bootstrap.d.ts  global.d.ts
(+406 files in other folders)
